Fix bX header position
This the recommendations header was not aligned properly at the
< 960px breakpoint because we've hidden the services links on the
full display page.

--- a/scss/components/search/_full-view.scss
+++ b/scss/components/search/_full-view.scss
@@ -73,3 +73,13 @@ get-it-note section {
   padding: 1em;
   font-weight: bold;
 }
+
+// Fix bX header position on smaller viewports
+.__sm prm-full-view-cont .recommendations-wrapper {
+  padding-left: 1em;
+}
+@media (max-width: 960px) {
+  .full-view-aside {
+    padding-left: 1em;
+  }
+}
